--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "docs:dev": "npm run generate:raws && vitepress dev docs",
-    "docs:build": "npm run generate:raws && vitepress build docs",
+    "docs:build": "npm run generate:raws && vitepress build docs && node run generate:layouts",
     "docs:serve": "npm run generate:raws && vitepress serve docs",
-    "generate:raws": "node docs/.vitepress/components/raws-generate.js"
+    "generate:raws": "node docs/.vitepress/components/raws-generate.js",
+    "generate:layouts": "mv docs/.vitepress/dist . && cp dist/index.html _layouts/default.html"
   },
   "dependencies": {
     "vue": "^3.2.37"
