--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "rollupx && eslint --fix lib/**/*.d.ts --no-ignore",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
@@ -34,12 +34,13 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "element-plus": "^2.2.11",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "rollupx": "^3.0.0-alpha.1",
     "sass": "^1.54.0",
     "shiki": "^0.10.1",
     "typescript": "~4.7.4",
