--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate:layouts": "mv docs/.vitepress/dist . && cp dist/index.html _layouts/default.html"
   },
   "dependencies": {
+    "element-plus": "^2.2.12",
     "vue": "^3.2.37"
   },
   "devDependencies": {
