--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "docs:dev": "npm run generate:raws && vitepress dev docs",
-    "docs:build": "npm run generate:raws && vitepress build docs && node run generate:layouts",
-    "docs:serve": "npm run generate:raws && vitepress serve docs",
-    "generate:raws": "node docs/.vitepress/components/raws-generate.js",
-    "generate:layouts": "mv docs/.vitepress/dist . && cp dist/index.html _layouts/default.html"
+    "docs:build": "npm run generate:raws && vitepress build docs",
+    "docs:serve": "vitepress serve docs --port 8080",
+    "generate:raws": "node docs/.vitepress/components/raws-generate.js"
   },
   "dependencies": {
     "element-plus": "^2.2.12",
@@ -41,7 +40,7 @@
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "rollupx": "^3.0.0-alpha.1",
+    "rollupx": "^3.0.0-alpha.2",
     "sass": "^1.54.0",
     "shiki": "^0.10.1",
     "typescript": "~4.7.4",
