--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lib"
   ],
   "scripts": {
-    "version": "npm run build && git add -A lib",
+    "version": "npm run build",
     "postversion": "git push origin master && npm publish",
     "dev": "vite",
     "build": "rollupx && eslint --fix lib/**/*.d.ts --no-ignore",
