--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "scripts": {
     "version": "npm run build",
     "postversion": "git push origin master && npm publish",
+    "start": "npm run dev",
     "dev": "vite",
     "build": "rollupx && eslint --fix lib/**/*.d.ts --no-ignore",
     "preview": "vite preview --port 4173",
-    "test:unit": "vitest --environment jsdom",
+    "test": "vitest --environment jsdom",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -31,26 +32,25 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.45",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/eslint-config-typescript": "^11.0.1",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "rollupx": "^3.0.0-alpha.2",
-    "sass": "^1.54.0",
-    "shiki": "^0.10.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.1",
-    "vitepress": "^1.0.0-alpha.4",
-    "vitest": "^0.18.1",
-    "vue-tsc": "^0.38.8"
+    "rollupx": "^3.0.0-alpha.4",
+    "sass": "^1.54.9",
+    "shiki": "^0.11.1",
+    "typescript": "~4.8.2",
+    "vite": "^3.1.0",
+    "vitepress": "^1.0.0-alpha.13",
+    "vitest": "^0.23.1",
+    "vue-tsc": "^0.40.12"
   },
   "browserslist": [
     "> 1%",
